--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -1,7 +1,7 @@
 .container {
   height: calc(100vh - var(--app-title-bar-height));
   display: grid;
-  grid-template-rows: 1fr 60px;
+  grid-template-rows: 1fr 80px;
 }
 
 .tree {
@@ -17,7 +17,28 @@
 
 .controls {
   padding: 0 16px;
+  height: 80px;
   display: flex;
   align-items: center;
-  column-gap: 8px;
+  box-sizing: border-box;
+
+  & > div {
+    display: flex;
+    align-items: center;
+  }
+}
+
+.cover {
+  width: 64px;
+  height: 64px;
+  flex-shrink: 0;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: #161616;
+  background-position: center;
+}
+
+.buttons {
+  margin-left: 16px;
+  display: flex;
 }
