--- a/src/components/Volume/styles.module.scss
+++ b/src/components/Volume/styles.module.scss
@@ -1,4 +1,25 @@
+.container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .volume {
   margin-left: auto;
   width: 150px;
+
+  &:hover {
+    & ~ .value {
+      display: block;
+    }
+  }
+}
+
+.value {
+  position: absolute;
+  transform: translateY(-100%);
+  display: none;
+  transition: all 0.2s ease-in-out;
 }
