--- a/src/components/TitleBar/styles.module.scss
+++ b/src/components/TitleBar/styles.module.scss
@@ -1,8 +1,10 @@
 .container {
+  z-index: 1;
+  position: relative;
   height: var(--app-title-bar-height);
   display: flex;
   justify-content: center;
   align-items: center;
-  -webkit-app-region: drag;
   font-size: 13px;
+  -webkit-app-region: drag;
 }
