--- a/src/components/TrackCover/styles.module.scss
+++ b/src/components/TrackCover/styles.module.scss
@@ -8,8 +8,12 @@
   overflow: hidden;
 
   & > img {
-    width: 60px;
-    height: 60px;
+    width: 80px;
+    height: 80px;
     object-fit: cover;
   }
+}
+
+.container.fullscreen {
+  background: none;
 }
