--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,11 +3,14 @@
   --black: #000;
 
   --blue: #0078d4;
+  --red: #e81123;
   --dark: #121212;
   --dark-2: #2c2c2c;
   --dark-3: #9f9f9f;
 
   --shadow-fullscreen: 0px 4px 12px color-opacity(var(--black), 0.1);
+
+  --app-title-bar-height: 32px;
 }
 
 html {
