added fullscreen controls bg

--- a/src/components/Controls/styles.module.scss
+++ b/src/components/Controls/styles.module.scss
@@ -13,8 +13,8 @@
   right: 0;
   bottom: 0;
   left: 0;
+  background-color: var(--bg);
   opacity: 0;
-  transition: all 0.2s ease-in-out;
 }
 
 .wrapper {
