--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,6 +8,8 @@
   --dark-2: #2c2c2c;
   --dark-3: #9f9f9f;
 
+  --bg: #111;
+
   --shadow-fullscreen: 0px 4px 12px color-opacity(var(--black), 0.1);
 
   --app-title-bar-height: 32px;
