--- a/src/components/Fullscreen/styles.module.scss
+++ b/src/components/Fullscreen/styles.module.scss
@@ -1,21 +1,56 @@
 .container {
   position: fixed;
   inset: 0;
+  padding: 32px;
   display: flex;
   justify-content: center;
   align-items: center;
+  box-sizing: border-box;
+}
 
-  & > div {
-    width: 400px;
+.container.maximized {
+  z-index: 1;
+
+  & .cover {
+    width: auto;
+    height: 100%;
+  }
+}
+
+.cover {
+  position: relative;
+  width: 400px;
+  display: flex;
+  box-shadow: var(--shadow-fullscreen);
+  border-radius: 10px;
+  overflow: hidden;
+
+  & > img {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+  }
+
+  & > button {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    width: 32px;
+    height: 32px;
     display: flex;
-    box-shadow: var(--shadow-fullscreen);
-    border-radius: 10px;
-    overflow: hidden;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    background-color: color-opacity(var(--black), 0.1);
+    opacity: 0;
+    transition: all 0.2s ease-in-out;
 
-    & > img {
-      width: 100%;
-      height: auto;
-      object-fit: contain;
+    & > svg {
+      fill: var(--white);
     }
+  }
+
+  &:hover > button {
+    opacity: 1;
   }
 }
