--- a/src/components/Controls/styles.module.scss
+++ b/src/components/Controls/styles.module.scss
@@ -1,6 +1,7 @@
 .container {
   position: relative;
   padding-right: 16px;
+  min-width: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -18,6 +19,7 @@
 }
 
 .wrapper {
+  min-width: 0;
   display: flex;
   align-items: center;
   flex-grow: 1;
